--- a/booth_exchange/programs/booth_exchange/Cargo.toml
+++ b/booth_exchange/programs/booth_exchange/Cargo.toml
@@ -21,4 +21,6 @@ overflow-checks = true
 [dependencies]
 anchor-lang = "0.24.2"
 anchor-spl = "0.24.2"
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
 token-minter = { path = "../token-minter", features = ["cpi"]}
+
