React frontend: Happy path to create mint, mint token, and transfer a mint token

--- a/booth_exchange/frontend/app/package.json
+++ b/booth_exchange/frontend/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@solana/spl-token": "0.2.0",
     "@project-serum/anchor": "^0.25.0",
     "@solana/wallet-adapter-base": "^0.9.9",
     "@solana/wallet-adapter-react": "^0.15.8",
